2006-07-31  Mo DeJong  <mdejong@users.sourceforge.net>

        * README.jacl:
        * README.tclblend: Update README files for
        1.4.0 release.
        * known_issues.txt: Remove old issue notes.
        * docs/contents.html:
        * docs/Topics/index.html:
        * docs/Topics/BuildJaclUnix.html:
        * docs/Topics/BuildJaclWin.html:
        * docs/Topics/BuildTclBlendUnix.html:
        * docs/Topics/BuildTclBlendWin.html:
        Add build instructions for 1.4.0 release.
        * docs/Topics/EventLoop.html:
        * docs/Topics/SetInterrupted.html:
        Replace CRLF with LF.
        * docs/Topics/index.html:

2006-07-28  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/native/javaInterp.c: Add deallocated
        Tcl_Obj check.
        * src/tclblend/tcl/lang/Interp.java (eval):
        Call preserve()/release() around the
        evalTclObject() invocation so that the
        ref count of the TclObject wrapped around
        the Tcl_Obj* is incremented. This avoids
        a crash during the eval invocation.
        * tests/tcljava/tcljavaInterp.test:
        Add test case for evalFile() bug.
        [Bug 1530631]

2006-07-26  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tclblend/tcl/lang/Interp.java (shlib_load):
        Make shlib_load synchronized in case two threads
        invoked the Interp constructor at the same time.

2006-07-26  Mo DeJong  <mdejong@users.sourceforge.net>

        * Makefile.in: Update 'make dist' build rules
        to include new files and remove old ones.
        Include itcl and tjc files in Jacl dist.

2006-07-26  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/native/javaIdle.c:
        * src/native/javaInterp.c (Java_tcl_lang_Interp_evalString,
        Java_tcl_lang_Interp_evalTclObject, JavaCmdProc,
        BTestCmd): Reimplement eval() methods and JavaCmdProc
        so that a Java exception is never left pending when